# gapgram-app

./: README.md
backend/app/users/: user_model.py  user_route.py  user_schema.py
backend/app/votes/: vote_model.py  vote_routes.py  vote_schemas.py  vote_services.py
server/: .env.example  DOCKERFILE  alembic.ini  pyproject.toml  requirement.txt
server/alembic/: env.py
server/alembic/versions/: 0000cbe3669f_add_defaul_values_for_post_and_user_.py  3a974e053852_.py  487226a77cb5_change_fields_names_of_post_model_to_.py  a4f4211a9d56_initial_migration.py
server/app/: main.py
server/app/auth/: auth_routes.py  auth_services.py
server/app/core/: config.py  oauth2.py  security.py
server/app/db/: database.py
server/app/dependency/: current_user.py
server/app/enums/: post.py  user.py
server/app/modules/auth/: auth_routes.py  auth_services.py
server/app/modules/posts/: post_model.py  post_routes.py  post_schemas.py  post_services.py
server/app/modules/users/: user_model.py  user_routes.py  user_services.py
server/app/modules/votes/: vote_model.py  vote_routes.py  vote_services.py
server/app/posts/: post_model.py  post_routes.py  post_schemas.py  post_services.py
server/app/users/: user_services.py
server/requirements/: base.txt  development.txt  production.txt
server/src/: main.py
server/src/common/dependencies/: current_user.py
server/src/common/errors/: business_codes.py
server/src/config/: config.py  development.py  production.py
server/src/db/: database.py
server/src/modules/auth/: routes.py  services.py
server/src/modules/posts/: model.py  routes.py  schemas.py  services.py
server/src/modules/users/: model.py  repository.py  routes.py  schemas.py  services.py
server/src/modules/votes/: model.py  routes.py  schemas.py  services.py
