[project]
name = "gapgram-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Nasir Ahmad Ehsan",email = "nasirahmadehsan1383@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (==0.128.0)",
    "uvicorn[standard] (==0.40.0)",
    "starlette (==0.50.0)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.12.0)",
    "pydantic-extra-types (==2.11.0)",
    "sqlalchemy (==2.0.46)",
    "asyncpg (==0.31.0)",
    "alembic (==1.18.4)",
    "psycopg2-binary (==2.9.11)",
    "python-jose[cryptography] (==3.5.0)",
    "passlib[bcrypt] (==1.7.4)",
    "bcrypt (==3.2.2)",
    "cryptography (==46.0.5)",
    "python-multipart (==0.0.21)",
    "python-dotenv (==1.2.1)",
    "httpx (==0.28.1)",
    "requests (==2.32.5)",
    "click (==8.1.7)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "jdatetime (==4.1.0)",
    "email-validator (==2.3.0)",
    "redis (==5.0.1)",
    "pillow (==11.3.0)",
    "aiofiles (==24.1.0)",
    "python-magic (==0.4.27)",
    "jinja2 (==3.1.6)",
    "sendgrid (==6.12.0)",
    "aiosmtplib (==3.0.2)",
    "celery (==5.5.0)",
    "marshmallow (==3.26.1)",
    "websockets (==15.0.1)",
    "orjson (==3.11.5)",
    "babel (==2.18.0)",
    "slowapi (==0.1.9)",
    "loguru (==0.7.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==24.10.0)",
    "isort (==5.13.2)",
    "flake8 (==7.1.1)",
    "pylint (==3.3.4)",
    "autoflake (==2.3.1)",
    "pre-commit (==4.1.0)",
    "pytest (==8.3.5)",
    "pytest-asyncio (==0.26.0)",
    "pytest-cov (==5.0.0)",
    "pytest-xdist (==3.6.1)",
    "factory-boy (==3.3.3)",
    "faker (==37.0.0)",
    "ipython (==8.35.0)",
    "ipdb (==0.13.13)",
    "watchdog (==6.0.0)",
    "rich (==14.2.0)",
    "typer (==0.21.0)",
    "pgcli (==4.1.0)",
    "memory-profiler (==0.61.0)",
    "locust (==2.32.0)",
    "mkdocs (==1.6.1)",
    "mkdocs-material (==9.6.12)",
    "radon (==6.0.1)",
    "bandit (==1.8.3)",
    "mypy (>=2.3.0,<3.0.0)",
    "line-profiler (>=5.0.2,<6.0.0)"
]
prod = [
    "gunicorn (==23.0.0)",
    "uvloop (==0.22.1)",
    "httptools (==0.7.1)",
    "sentry-sdk (==2.48.0)",
    "prometheus-client (==0.24.1)",
    "brotli (==1.2.0)",
    "zstandard (==0.25.0)",
    "elasticsearch (==8.17.0)",
    "opentelemetry-api (==1.30.0)",
    "opentelemetry-sdk (==1.30.0)",
    "opentelemetry-instrumentation-fastapi (==0.51b0)"
]
[tool.poetry]
package-mode = false